--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -58,6 +58,11 @@
                 <td>{{ activity.max_speed | number:'1.2-2'}} km/hr</td>
             </tr>
         </ng-template>
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="10">No activities found.</td>
+            </tr>
+        </ng-template>
     </p-table>
 </div>
 
