--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -20,18 +20,7 @@
         </div>
 
         <div class="custom-password input_top">
-            <p-password formControlName="password" [toggleMask]="true" placeholder="Password">
-                <ng-template pTemplate="footer">
-                    <p-divider></p-divider>
-                    <p class="mt-2">Suggestions</p>
-                    <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
-                        <li>At least one lowercase</li>
-                        <li>At least one uppercase</li>
-                        <li>At least one numeric</li>
-                        <li>Minimum 8 characters</li>
-                    </ul>
-                </ng-template>
-            </p-password>
+            <p-password formControlName="password" [toggleMask]="true" placeholder="Password" [feedback]="false" />
         </div>
         <div class="my-3 flex justify-content-center signin_btn input_top">
             <button type="submit" pButton pRipple label="Register" class="p-button-primary">
