--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
                         </a>
                     </li>
 
-                    <li (click)="sidebarVisible = false">
+                    <li (click)="navigateToPath('/settings')">
                         <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
                             <i class="pi pi-cog mr-2"></i>
