--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -128,7 +128,7 @@
                 <td>{{track.distance_end | number:'1.2-2'}} km</td>
                 <td>{{track.distance | number:'1.2-2' }} km</td>
                 <td>{{track.moving_time}}</td>
-                <td>{{track.pace | number:'1.2-2'}} hr/km</td>
+                <td>{{track.pace }} /km</td>
                 <td>{{track.speed | number:'1.2-2'}} km/hr</td>
             </tr>
         </ng-template>
@@ -161,8 +161,8 @@
                 <th>Valence</th>
                 <th>eBPM</th>
                 <th>Duration</th>
-                <th>Track Href</th>
-                <th>Analysis Url</th>
+                <!-- <th>Track Href</th>
+                <th>Analysis Url</th> -->
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-audioFeature>
@@ -176,9 +176,9 @@
                 <td>{{ audioFeature.liveness }}</td>
                 <td>{{ audioFeature.valence }}</td>
                 <td>{{ audioFeature.tempo }}</td>
-                <td>{{ audioFeature.duration_ms }}</td>
-                <td>{{ audioFeature.track_href }}</td>
-                <td>{{ audioFeature.analysis_url }}</td>
+                <td>{{ formatTrackDuration(audioFeature.duration_ms) }}</td>
+                <!-- <td>{{ audioFeature.track_href }}</td>
+                <td>{{ audioFeature.analysis_url }}</td> -->
             </tr>
         </ng-template>
     </p-table>
