added playlist-details component

--- a/src/app/spotify/playlist/playlist.component.html
+++ b/src/app/spotify/playlist/playlist.component.html
@@ -94,7 +94,7 @@
 </div>
 
 <!-- Audio Features -->
-<div class="mt-2" *ngIf="showAudioFeatures">
+<div class="mt-2" *ngIf="showAudioFeatures">j ...........c-
     <p-table [value]="audioFeatures" styleClass="p-datatable-gridlines" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="caption">
 
