--- a/src/app/spotify/playlist-details/playlist-details.component.html
+++ b/src/app/spotify/playlist-details/playlist-details.component.html
@@ -3,19 +3,25 @@
 }
 <!-- Playlist Tracks List -->
 <div class="palylist_table" *ngIf=" !showAudioFeatures">
-    <p-table [value]="playlistTracks" [tableStyle]="{'min-width': '60rem'}">
+    <p-table [value]="playlistTracks" [tableStyle]="{'min-width': '60rem'}" (onRowReorder)="tableReordered()">
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <h3>Tracks</h3>
                 <h3>{{currentPlayListName}}</h3>
-                <div >
+                <div>
+                    <label class="m-2 pb-2">Show Graph</label>
+                    <p-inputSwitch [(ngModel)]="showGraph" class="mr-2" />
                     <p-button class="mr-2" severity="warning" (click)="updatePlaylist()">Save changes</p-button>
-                    <p-button class="mr-2" severity="success" >Save as new</p-button>
+                    <p-button class="mr-2" severity="success">Save as new</p-button>
                     <p-button (click)="backToPlaylists()">Back</p-button>
                 </div>
-                
+
+            </div>
+            <div>
+                <p-chart type="line" [data]="data" [options]="options" *ngIf="showGraph" />
             </div>
         </ng-template>
+
         <ng-template pTemplate="header">
             <tr>
                 <th style="width:80px">
@@ -78,7 +84,7 @@
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr class="">
-                <td colspan="8">No tracks found in the current playlist.</td>
+                <td colspan="10">No tracks found in the current playlist.</td>
             </tr>
         </ng-template>
     </p-table>
