added several changes to playlist and it's details

--- a/src/app/spotify/playlist/playlist.component.css
+++ b/src/app/spotify/playlist/playlist.component.css
@@ -2,6 +2,24 @@
     cursor: pointer;
 }
 .all_listgrid_inner img{
-    width:70%;
+    width:100%;
     border-radius: 10px;
+}
+.playlist-img-tb{
+    height: 100px ;
+    width: 100px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+::ng-deep .btn-grp-custom button{
+    outline: none;
+    box-shadow: none;
+}
+.playlist_pagetitle_section{
+    position: relative;
+}
+.btn_grp_short{
+    position: absolute;
+    right: 0;
+    top: 20px;
 }
