--- a/src/app/spotify/playlist-details/playlist-details.component.html
+++ b/src/app/spotify/playlist-details/playlist-details.component.html
@@ -10,16 +10,17 @@
             <div class="flex flex-row justify-content-between">
                 <h3>Tracks</h3>
                 <h3>{{currentPlayListName}}</h3>
-                <div>
-                    <label class="m-2 pb-2">Show Graph</label>
-                    <p-inputSwitch [(ngModel)]="showGraph" class="mr-2" />
-                    <p-button class="mr-2" severity="warning" (click)="confirmUpdatePlaylist()" icon="pi pi-play-circle"
-                        iconPos="right" label="Save changes"></p-button>
-                    <p-button class="mr-2" severity="success" icon="pi pi-play-circle" iconPos="right"
-                        label="Save as new" (onClick)="plNameVisible=true"></p-button>
+                <div class="flex flex-row">
+                    <div *ngIf="playlistTracks.length > 0">
+                        <label class="m-2 pb-2">Show Graph</label>
+                        <p-inputSwitch [(ngModel)]="showGraph" class="mr-2" />
+                        <p-button class="mr-2" severity="warning" (click)="confirmUpdatePlaylist()"
+                            icon="pi pi-play-circle" iconPos="right" label="Save changes"></p-button>
+                        <p-button class="mr-2" severity="success" icon="pi pi-play-circle" iconPos="right"
+                            label="Save as new" (onClick)="plNameVisible=true"></p-button>
+                    </div>
                     <p-button (click)="backToPlaylists()">Back</p-button>
                 </div>
-
             </div>
             <div>
                 <p-chart type="line" [data]="data" [options]="options" *ngIf="showGraph" />
@@ -139,13 +140,14 @@
 </div> -->
 
 
-<p-dialog header="Create New Playlist" [modal]="true" [draggable]="false" [(visible)]="plNameVisible" [style]="{ width: '25rem' }">
+<p-dialog header="Create New Playlist" [modal]="true" [draggable]="false" [(visible)]="plNameVisible"
+    [style]="{ width: '25rem' }">
     <span class="p-text-secondary block mb-5">Enter name for new playlist.</span>
     <div class="flex align-items-center gap-3 mb-3">
         <label for="username" class="font-semibold w-6rem">Playlist Name</label>
         <input pInputText id="username" class="flex-auto" [(ngModel)]="playlistName" />
     </div>
-    
+
     <div class="flex justify-content-end gap-2">
         <p-button label="Cancel" severity="secondary" (onClick)="plNameVisible = false" />
         <p-button label="Save" (onClick)="createNewPlaylist()" />
